--- a/public/slick/slick.scss
+++ b/public/slick/slick.scss
@@ -72,8 +72,7 @@ $slick-opacity-not-active: .25 !default;
         cursor: hand;
     }
 }
-.slick-slider .slick-track,
-.slick-slider .slick-list {
+.slick-slider .slick-track {
     -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
     -ms-transform: translate3d(0, 0, 0);
